# mmoc

./: #test.c#  .#test.c  .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  STATUS.md  fix_antlr.sh  implementation.md  learning-compilers.org  logs.txt  release.sh  setup.sh  test  test.ll  test.s  test2.c  test_antlr_fix.sh  test_char_simple  test_include.h  test_preprocessor  test_runner.py  test_simple_no_macro
.github/workflows/: ci.yml  release.yml
build-clean/: .ninja_deps  .ninja_log  CTestTestfile.cmake  build.ninja  cmake_install.cmake
cmake/: LLVMSetup.cmake  patch_antlr.sh
lean/: main.lean
llvm/: following-kaleidoscope.org
src/ast/: Expr.cpp  Expr.h  Node.cpp  Node.h  Stmt.cpp  Stmt.h
src/codegen/: IRGenerator.cpp  IRGenerator.h
src/driver/: Driver.cpp  Driver.h  main.cpp
src/parser/: ASTBuilder.cpp  ASTBuilder.h
src/preprocessor/: Preprocessor.cpp  Preprocessor.h
src/sema/: SymbolTable.cpp  SymbolTable.h  TypeChecker.cpp  TypeChecker.h
src/utils/: Error.cpp  Error.h
test/inputs/: arithmetic.c  factorial.c  simple.c
test/unit/: test_ast.cpp  test_lexer.cpp  test_parser.cpp
tests/: README.md  for_loop_basic.c  for_loop_increment.c  manual_test.sh  run_tests.sh  temp_test.c  ternary_complex.c  ternary_test.c  test_runner.py
tests/Arithmetic/: addition.c  multiplication_precedence.c
tests/Arrays/: array_init.c  basic_array.c
tests/Basic/: simple_return.c
tests/C11/: bool_final.c  bool_func.c  bool_if.c  bool_if_simple.c  bool_test.c  int_if.c  simple_bool.c
tests/ControlFlow/: break_for.c  break_while.c  continue_for.c  if_comparison.c  if_simple.c  logical_ops.c  short_circuit_and.c  short_circuit_or.c  while_simple.c
tests/Functions/: multiple_params.c  simple_call.c
tests/Operators/: decrement_loop.c  increment.c  increment_basic.c  increment_chained.c  increment_pointer.c  prefix_postfix.c
tests/Pointers/: basic_pointer.c
tests/Preprocessor/: basic_macros.c  complex_macros.c  include_helper.h  include_test.c
tests/Sizeof/: sizeof_basic.c
tests/Variables/: assignment.c  compound_assignment.c  declaration.c
toy-compiler/: lex  lex.c  lex.h
